--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 <h1 class = "text-center mt-5">Pricing</h1>
 <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero laboriosam repellendus iste, velit pariatur quo dolorum. Recusandae dolorum voluptatum cum dignissimos quasi, nobis numquam quo sapiente illum accusamus maiores quaerat.</p>
 
-<div class="row mt-5">
-    <div class="col">
+<div class="row mt-5 justify-content-center">
+    <div class="col-12  col-lg-3">
       
         <div class="card">
             
@@ -63,7 +63,7 @@
           </div>
       </div>
     </div>
-    <div class="col">
+    <div class="col-12  col-lg-3">
         <div class="card">
             <h5 class="card-header text-center">PRO</h5>
             <div class="card-body">
@@ -73,7 +73,7 @@
             </div>
           </div>
     </div>
-    <div class="col">
+    <div class="col-12 col-lg-3">
        <div class="card">
   <h5 class="card-header text-center">ENTERPRISE</h5>
   <div class="card-body">
